[tool.poetry]
name = "py"
version = "0.1.0"
description = ""
authors = ["liuxieric123 <liuxieric123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aptos_sdk = "^0.9"
httpx = "^0.27.2"
socksio = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
